[package]
name = "bevy_pretty_nice_menus"
version = "0.3.1"
edition = "2024"
description = "A menu stack abstraction for Bevy"
categories = ["game-development"]
keywords = ["bevy", "menu"]
rust-version = "1.88.0"                                                      # Follows bevy 0.17
license = "MIT OR Apache-2.0"
repository = "https://github.com/DragonFoxCollective/bevy_pretty_nice_menus"

[features]
default = ["visibility"]
pretty_nice_input = ["dep:bevy_pretty_nice_input"]
visibility = ["bevy/bevy_camera"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
	"bevy_log",
	"reflect_auto_register",
] }
bevy_pretty_nice_input = { version = "0.4.0", optional = true }
